--- a/templates/cadastro_area.html
+++ b/templates/cadastro_area.html
@@ -99,6 +99,19 @@
 						</table> <br><br><br>
 				</form>
 			</div>
+			<div id="Colunas">
+				  	<h1>
+				 	<table>
+					{{range .Tabela}}
+						<tr>
+						{{range .}}
+							<td>{{.}}</td>
+						{{end}}
+						</tr>
+					{{end}}
+					</table>
+					</h1>
+			</div>
 			<div id="content_bottom"></div>
 		</div>
 	</div>
