--- a/templates/cadastro_glp.html
+++ b/templates/cadastro_glp.html
@@ -141,7 +141,20 @@
 						</table> <br><br><br>
 				</form>
 			</div>
-			<div id="content_bottom"></div>
+			<div id="Colunas">
+				<h1>
+			   	<table>
+			  		{{range .Tabela}}
+				  		<tr>
+				  		{{range .}}
+					  		<td>{{.}}</td>
+				  		{{end}}
+				  		</tr>
+			  		{{end}}
+			  </table>
+			  </h1>
+	  		</div>
+	  <div id="content_bottom"></div>
 		</div>
 	</div>
 </body>
