--- a/templates/cadastro_area.html
+++ b/templates/cadastro_area.html
@@ -23,6 +23,50 @@
 		<div id="content">
 
 			<script type="text/javascript">
+				function handleChangeRadio() {
+					for (var i = 0; i < document.getElementsByName("name_check_box").length; i++) {
+						if (document.getElementsByName("name_check_box")[i].checked) {
+							document.getElementsByName("name_check_box")[i].checked = false;
+						}
+					}
+					//erro pra baixo
+					//for (var i = 0; i < document.getElementsByName("operation").length; i++) {
+						if (document.getElementsByName("operation")[0].value = "Inserir") {
+							document.getElementsByName("name_radio")[0].enable = true;
+						}
+						if (document.getElementsByName("operation")[1].value = "Localizar") {
+							document.getElementsByName("name_radio")[1].enable = true;
+						}
+						if (document.getElementsByName("operation")[2].value = "Eliminar") {
+							document.getElementsByName("name_radio")[2].enable = false;
+						}
+						if (document.getElementsByName("operation")[3].value = "Alterar") {
+							document.getElementsByName("name_radio")[3].enable = true;
+						}
+					//}
+				}
+				function handleChangeCheckBox() {
+					for (var i = 0; i < document.getElementsByName("name_radio").length; i++) {
+						if (document.getElementsByName("name_radio")[i].checked) {
+							document.getElementsByName("name_radio")[i].checked = false;
+						}
+					}
+					//erro pra baixo
+					//for (var i = 0; i < document.getElementsByName("operation").length; i++) {
+						if (document.getElementsByName("operation")[0].value = "Inserir") {
+							document.getElementsByName("name_radio")[0].enable = true;
+						}
+						if (document.getElementsByName("operation")[1].value = "Localizar") {
+							document.getElementsByName("name_radio")[1].enable = true;
+						}
+						if (document.getElementsByName("operation")[2].value = "Eliminar") {
+							document.getElementsByName("name_radio")[2].enable = true;
+						}
+						if (document.getElementsByName("operation")[3].value = "Alterar") {
+							document.getElementsByName("name_radio")[3].enable = false;
+						}
+					//}
+				}
 				function onsubmitform() {
 					if (document.pressed == 'Inserir') {
 						if (document.getElementsByName("descricao")[0].value == null
@@ -36,13 +80,13 @@
 						document.myform1.action = "{{ .Host }}/CadastroArea";
 					} else if (document.pressed == 'Eliminar') {
 						var selecionado = false;
-						for (var i = 0; i < document.getElementsByName("id").length; i++) {
-							if (document.getElementsByName("id")[i].checked) {
+						for (var i = 0; i < document.getElementsByName("name_check_box").length; i++) {
+							if (document.getElementsByName("name_check_box")[i].checked) {
 								selecionado = true;
 							}
 						}
 						if (!selecionado) {
-							alert('Registro não selecionado para ser eliminado!');
+							alert('Nenhum registro selecionado para ser eliminado!');
 							return false;
 						} else {
 							document.myform2.action = "{{ .Host }}/CadastroArea";
@@ -55,8 +99,8 @@
 						} else {
 							var selecionado = false;
 							for (var i = 0; i < document
-									.getElementsByName("id").length; i++) {
-								if (document.getElementsByName("id")[i].checked) {
+									.getElementsByName("name_radio").length; i++) {
+								if (document.getElementsByName("name_radio")[i].checked) {
 									selecionado = true;
 								}
 							}
@@ -95,21 +139,45 @@
 											onclick="document.pressed=this.value" value="Localizar">
 									</h1>
 								</td>
+								<td>
+									<h1>
+										<input type="submit" name="operation"
+											onclick="document.pressed=this.value" value="Eliminar">
+									</h1>
+								</td>
+								<td>
+									<h1>
+										<input type="submit" name="operation"
+											onclick="document.pressed=this.value" value="Alterar">
+									</h1>
+								</td>
 							</tr>
 						</table> <br><br><br>
-				</form>
 			</div>
+				</form>
+				<input type="hidden" name="descricao_myform1" value="">
 			<div id="Colunas">
 				  	<h1>
 				 	<table>
-					{{range .Tabela}}
-						<tr>
-						{{range .}}
-							<td>{{.}}</td>
-						{{end}}
-						</tr>
+					{{range $key1, $value1 := .TabelaDados }}
+						{{if $value1}}
+							<tr>
+							{{range $key2, $value2 := .}}
+							 	{{if $key2}}
+								 	{{if $value2}}
+										<td>{{$value2}}</td>
+									{{end}}
+								{{else}}
+								 	{{if $value2}}
+										<td><input type="radio" id="id_radio" name="name_radio" value="{{$key1}}" onchange="handleChangeRadio();"></td>
+										<td><input type="checkbox" id="id_checkbox" name="name_check_box" value="{{$key1}}" onchange="handleChangeCheckBox();"></td>
+									{{end}}
+								{{end}}
+							{{end}}
+						 	</tr>
+						 {{end}}
 					{{end}}
-					</table>
+				</table>
 					</h1>
 			</div>
 			<div id="content_bottom"></div>
