--- a/templates/cadastro_glp.html
+++ b/templates/cadastro_glp.html
@@ -144,7 +144,7 @@
 			<div id="Colunas">
 				<h1>
 			   	<table>
-			  		{{range .Tabela}}
+			  		{{range .TabelaDados}}
 				  		<tr>
 				  		{{range .}}
 					  		<td>{{.}}</td>
