--- a/templates/cadastro_area.html
+++ b/templates/cadastro_area.html
@@ -67,6 +67,11 @@
 							document.getElementsByName("operation")[i].disabled = false;
 						}
 					}
+					for (var i = 0; i < document.getElementsByName("name_radio").length; i++) {
+						if (document.getElementsByName("name_radio")[i].checked) {
+							document.getElementsByName("descricao")[0].value = document.getElementsByName("descricao_hidden")[i].value;
+						}
+					}
 				}
 				function handleChangeCheckBox() {
 					for (var i = 0; i < document.getElementsByName("name_radio").length; i++) {
@@ -88,6 +93,7 @@
 							document.getElementsByName("operation")[i].disabled = true;
 						}
 					}
+					document.getElementsByName("descricao")[0].value = "";
 				}
 				function onsubmitform() {
 					if (document.pressed == 'Inserir') {
@@ -176,7 +182,6 @@
 							</tr>
 						</table> <br><br><br>
 			</div>
-				</form>
 				<input type="hidden" name="descricao_myform1" value="">
 			<div id="Colunas">
 				  	<h1>
@@ -187,7 +192,20 @@
 							{{range $key2, $value2 := .}}
 							 	{{if $key2}}
 								 	{{if $value2}}
-										<td>{{$value2}}</td>
+										{{if eq $key2 1}}
+											<input type="hidden" name="id_hidden" value="{{$value2}}">
+											<input type="hidden" name="id_hidden_{{$key1}}" value="{{$value2}}">
+										{{end}}
+										{{if eq $key2 2}}
+											<td>{{$value2}}</td>
+											<input type="hidden" name="descricao_hidden" value="{{$value2}}">
+											<input type="hidden" name="descricao_hidden_{{$key1}}" value="{{$value2}}">
+										{{end}}
+										{{if eq $key2 3}}
+											<td>{{$value2}}</td>
+											<input type="hidden" name="ts_hidden" value="{{$value2}}">
+											<input type="hidden" name="ts_hidden_{{$key1}}" value="{{$value2}}">
+										{{end}}
 									{{end}}
 								{{else}}
 								 	{{if $value2}}
@@ -202,6 +220,7 @@
 				</table>
 					</h1>
 			</div>
+				</form>
 			<div id="content_bottom"></div>
 		</div>
 	</div>
