--- a/templates/cadastro_area.html
+++ b/templates/cadastro_area.html
@@ -24,12 +24,9 @@
 
 			<script type="text/javascript">
 				function handleclick() {
-					for (var i = 0; i < document.getElementsByName("descricao").length; i++) {
-						if (document.getElementsByName("name_check_box")[i].checked) {
-							document.getElementsByName("name_check_box")[i].checked = false;
-						}
-						if (document.getElementsByName("name_radio")[i].checked) {
-							document.getElementsByName("name_radio")[i].checked = false;
+					for (var i = 0; i < document.getElementsByName("name_checkbox").length; i++) {
+						if (document.getElementsByName("name_checkbox")[i].checked) {
+							document.getElementsByName("name_checkbox")[i].checked = false;
 						}
 					}
 					for (var i = 0; i < document.getElementsByName("operation").length; i++) {
@@ -43,14 +40,14 @@
 							document.getElementsByName("operation")[i].disabled = true;
 						}
 						if (document.getElementsByName("operation")[i].value == "Alterar") {
-							document.getElementsByName("operation")[i].disabled = true;
+							document.getElementsByName("operation")[i].disabled = false;
 						}
 					}
 				}
 				function handleChangeRadio() {
-					for (var i = 0; i < document.getElementsByName("name_check_box").length; i++) {
-						if (document.getElementsByName("name_check_box")[i].checked) {
-							document.getElementsByName("name_check_box")[i].checked = false;
+					for (var i = 0; i < document.getElementsByName("name_checkbox").length; i++) {
+						if (document.getElementsByName("name_checkbox")[i].checked) {
+							document.getElementsByName("name_checkbox")[i].checked = false;
 						}
 					}
 					for (var i = 0; i < document.getElementsByName("operation").length; i++) {
@@ -108,8 +105,13 @@
 						document.myform1.action = "{{ .Host }}/CadastroArea";
 					} else if (document.pressed == 'Eliminar') {
 						var selecionado = false;
-						for (var i = 0; i < document.getElementsByName("name_check_box").length; i++) {
-							if (document.getElementsByName("name_check_box")[i].checked) {
+						for (var i = 0; i < document.getElementsByName("name_checkbox").length; i++) {
+							if (document.getElementsByName("name_checkbox")[i].checked) {
+								selecionado = true;
+							}
+						}
+						for (var i = 0; i < document.getElementsByName("name_radio").length; i++) {
+							if (document.getElementsByName("name_radio")[i].checked) {
 								selecionado = true;
 							}
 						}
@@ -126,8 +128,7 @@
 							return false;
 						} else {
 							var selecionado = false;
-							for (var i = 0; i < document
-									.getElementsByName("name_radio").length; i++) {
+							for (var i = 0; i < document.getElementsByName("name_radio").length; i++) {
 								if (document.getElementsByName("name_radio")[i].checked) {
 									selecionado = true;
 								}
@@ -136,9 +137,9 @@
 								alert('Registro não selecionado para ser alterado!');
 								return false;
 							} else {
-								document.getElementsByName("descricao_myform1")[0].value = document
-										.getElementsByName("descricao")[0].value;
-							document.myform2.action = "{{ .Host }}/CadastroArea";
+								//document.getElementsByName("descricao_myform1")[0].value = document
+								//		.getElementsByName("descricao")[0].value;
+								document.myform2.action = "{{ .Host }}/CadastroArea";
 							}
 						}
 					}
@@ -182,7 +183,7 @@
 							</tr>
 						</table> <br><br><br>
 			</div>
-				<input type="hidden" name="descricao_myform1" value="">
+				<!-- <input type="hidden" name="descricao_myform1" value=""> -->
 			<div id="Colunas">
 				  	<h1>
 				 	<table>
@@ -193,24 +194,20 @@
 							 	{{if $key2}}
 								 	{{if $value2}}
 										{{if eq $key2 1}}
-											<input type="hidden" name="id_hidden" value="{{$value2}}">
-											<input type="hidden" name="id_hidden_{{$key1}}" value="{{$value2}}">
+											<td>{{$value2}}</td>
 										{{end}}
 										{{if eq $key2 2}}
+										<input type="hidden" name="descricao_hidden" value="{{$value2}}"> 
 											<td>{{$value2}}</td>
-											<input type="hidden" name="descricao_hidden" value="{{$value2}}">
-											<input type="hidden" name="descricao_hidden_{{$key1}}" value="{{$value2}}">
 										{{end}}
 										{{if eq $key2 3}}
 											<td>{{$value2}}</td>
-											<input type="hidden" name="ts_hidden" value="{{$value2}}">
-											<input type="hidden" name="ts_hidden_{{$key1}}" value="{{$value2}}">
 										{{end}}
 									{{end}}
 								{{else}}
 								 	{{if $value2}}
 										<td><input type="radio" id="id_radio" name="name_radio" value="{{$key1}}" onchange="handleChangeRadio();"></td>
-										<td><input type="checkbox" id="id_checkbox" name="name_check_box" value="{{$key1}}" onchange="handleChangeCheckBox();"></td>
+										<td><input type="checkbox" id="id_checkbox" name="name_checkbox" value="{{$key1}}" onchange="handleChangeCheckBox();"></td>
 									{{end}}
 								{{end}}
 							{{end}}
