--- a/templates/cadastro_area.html
+++ b/templates/cadastro_area.html
@@ -6,7 +6,7 @@
 <title>{{ .Title }}</title>
 </head>
 
-<body onload="onloadform()">
+<body>
 	<div id="container">
 		<div id="header">
 			<h1>{{ .Header }}</h1>
@@ -21,20 +21,21 @@
 			</ul>
 		</div>
 		<div id="content">
-
-			<script type="text/javascript">
-				function onloadform()
-				{
-					if (document.pressed == "Inserir") {
-						document.myform1.action = "{{ .Host }}/CadastroArea?operation=Reflesh"
-						document.forms["myform1"].submit();
-					} else {
-						if (document.getElementsByName("operation").value == "Reflesh") {
-							document.pressed = "Localizar";
-							document.getElementsByName("operation").value = document.pressed;
-						}
-					}
-				}
+			 <script type="text/javascript">
+				document.addEventListener('readystatechange', event => {
+  					switch (document.readyState) {
+    					case "loading":
+      						break;
+    					case "interactive":
+      						break;
+    					case "complete":
+							if (document.getElementsByName("reload")[0].value == 0) {
+								alert("Acione Localizar e visualize!");
+								//history.go(0);
+							}
+      						break;
+  						}
+				});
 				function handleclickDescricao() {
 					for (var i = 0; i < document.getElementsByName("name_checkbox").length; i++) {
 						if (document.getElementsByName("name_checkbox")[i].checked) {
@@ -111,7 +112,11 @@
 							alert('Descricao não preenchida!');
 							return false;
 						} else {
-							document.myform1.action = "{{ .Host }}/CadastroArea";
+							if (confirm("Confirma Inserção!") == true) {
+								document.myform1.action = "{{ .Host }}/CadastroArea";
+							} else {
+								return false;
+							}
 						}
 					} else if (document.pressed == 'Localizar') {
 						document.myform1.action = "{{ .Host }}/CadastroArea";
@@ -131,7 +136,11 @@
 							alert('Nenhum registro selecionado para ser eliminado!');
 							return false;
 						} else {
-							document.myform1.action = "{{ .Host }}/CadastroArea";
+							if (confirm("Confirma Exclusão!") == true) {
+								document.myform1.action = "{{ .Host }}/CadastroArea";
+							} else {
+								return false;
+							}
 						}
 					} else if (document.pressed == 'Alterar') {
 						if (document.getElementsByName("descricao")[0].value == null
@@ -151,7 +160,11 @@
 							} else {
 								//document.getElementsByName("descricao_myform1")[0].value = document
 								//		.getElementsByName("descricao")[0].value;
-								document.myform1.action = "{{ .Host }}/CadastroArea";
+								if (confirm("Confirma Alteração!") == true) {
+									document.myform1.action = "{{ .Host }}/CadastroArea";
+								} else {
+									return false;
+								}
 							}
 						}
 					}
@@ -161,8 +174,7 @@
 
 			<div id="content_top"></div>
 			<div id="content_main">
-				<!--<form name="myform1" onsubmit="return onsubmitform();">-->
-				<form name="myform1" onsubmit="onsubmitform()">
+				<form name="myform1" onsubmit="return onsubmitform();">
 					<h1>
 						Descricao&nbsp;:&nbsp;<input type="text" name="descricao" onClick="handleclickDescricao()">
 					</h1>
@@ -202,7 +214,7 @@
 				 	<table>
 					{{range $key1, $value1 := .TabelaDados }}
 						{{if $value1}}
-							<tr>
+							<!--<tr>-->
 							{{range $key2, $value2 := .}}
 							 	{{if $key2}}
 								 	{{if $value2}}
@@ -214,17 +226,17 @@
 											<td>{{$value2}}</td>
 										{{end}}
 										{{if eq $key2 3}}
-											<td>{{$value2}}</td>
+											<td>{{$value2}}</td></tr>
 										{{end}}
 									{{end}}
 								{{else}}
 								 	{{if $value2}}
-										<td><input type="radio" id="id_radio" name="name_radio" value="{{$key1}}" onchange="handleChangeRadio();"></td>
-										<td><input type="checkbox" id="id_checkbox" name="name_checkbox" value="{{$key1}}" onchange="handleChangeCheckBox();"></td>
+										<tr><td><input type="radio" id="id_radio" name="name_radio" value="{{$value2}}" onchange="handleChangeRadio();"></td>
+										<td><input type="checkbox" id="id_checkbox" name="name_checkbox" value="{{$value2}}" onchange="handleChangeCheckBox();"></td>
 									{{end}}
 								{{end}}
 							{{end}}
-						 	</tr>
+						 	<!--</tr>-->
 						 {{end}}
 					{{end}}
 				</table>
