--- a/templates/cadastro_preco.html
+++ b/templates/cadastro_preco.html
@@ -10,7 +10,7 @@
 	<div id="container">
 		<div id="header">
 			<h1>{{ .Header }}</h1>
-			<h2>Cadastro Area</h2>
+			<h2>Cadastro Preço</h2>
 		</div>
 		<div id="menu">
 			<ul>
@@ -20,93 +20,161 @@
 				<li class="menuitem"><a href="{{ .Host }}/Sobre"><h1>??</h1></a></li>
 			</ul>
 		</div>
-
 		<div id="content">
-
 			<script type="text/javascript">
-	function onsubmitform()
-	{
-	     var selecionado;
-	     if (document.pressed == 'Inserir') {
-			if ((document.getElementsByName("preco")[0].value == null ||
-				document.getElementsByName("preco")[0].value == "")) {
-				alert('Preco não preenchidos!');
-				return false;
-			}
-			if ((document.getElementsByName("id_glp")[0].value == null ||
-				document.getElementsByName("id_glp")[0].value == "")) {
-				alert('Glp não preenchido!');
-				return false;
-			}
-			if ((document.getElementsByName("id_area")[0].value == null ||
-				document.getElementsByName("id_area")[0].value == "")) {
-				alert('Area não preenchida!');
-				return false;
-			} else {
-				document.myform1.action = "InserirPreco.jsp";
-			}
-	     } else if (document.pressed == 'Localizar') {
-			document.myform1.action = "cadastro_preco.jsp";
-	     } else if (document.pressed == 'Eliminar') {
-			selecionado = false;
-			for (var i = 0; i < document.getElementsByName("id").length; i++) {
-				if (document.getElementsByName("id")[i].checked) {
-					selecionado = true;
-				}
-			}
-			if (!selecionado) {
-				alert('Registro não selecionado para ser eliminado!');
-				return false;
-			} else {
-			  	document.myform2.action = "EliminarPreco.jsp";
-			}
-	     } else if (document.pressed == 'Alterar') {
-			selecionado = false;
-			if ((document.getElementsByName("id_glp")[0].value == null ||
-				document.getElementsByName("id_glp")[0].value == "")) {
-				selecionado = true;
-			}
-			if ((document.getElementsByName("id_area")[0].value == null ||
-				document.getElementsByName("id_area")[0].value == "")) {
-				selecionado = true;
-			}
-			if (!selecionado && (document.getElementsByName("preco")[0].value == null ||
-				document.getElementsByName("preco")[0].value == "")) {
-				alert('Area, glp e ou preco não preenchidos!');
-				return false;
-			} else {
-				selecionado = false;
-				for (var i = 0; i < document.getElementsByName("id").length; i++) {
-					if (document.getElementsByName("id")[i].checked) {
-						selecionado = true;
+				document.addEventListener('readystatechange', event => {
+  					switch (document.readyState) {
+    					case "loading":
+      						break;
+    					case "interactive":
+      						break;
+    					case "complete":
+							if (document.getElementsByName("reload")[0].value == 0) {
+								document.pressed = "Localizar";
+								for (var i = 0; i < document.getElementsByName("operation").length; i++) {
+									if (document.getElementsByName("operation")[i].value == "Localizar") {
+										document.getElementsByName("operation")[i].enable = true;
+										document.getElementsByName("operation")[i].click();
+									}
+								}
+							}
+      						break;
+  						}
+				});
+				function handleclickDescricao() {
+					for (var i = 0; i < document.getElementsByName("name_checkbox").length; i++) {
+						if (document.getElementsByName("name_checkbox")[i].checked) {
+							document.getElementsByName("name_checkbox")[i].checked = false;
+						}
+					}
+					for (var i = 0; i < document.getElementsByName("operation").length; i++) {
+						if (document.getElementsByName("operation")[i].value == "Inserir") {
+							document.getElementsByName("operation")[i].disabled = false;
+						}
+						if (document.getElementsByName("operation")[i].value == "Localizar") {
+							document.getElementsByName("operation")[i].disabled = false;
+						}
+						if (document.getElementsByName("operation")[i].value == "Eliminar") {
+							document.getElementsByName("operation")[i].disabled = true;
+						}
+						if (document.getElementsByName("operation")[i].value == "Alterar") {
+							document.getElementsByName("operation")[i].disabled = false;
+						}
 					}
 				}
-				if (!selecionado) {
-					alert('Registro não selecionado para ser alterado!');
-					return false;
-				} else {
-					if (!((document.getElementsByName("preco")[0].value == null ||
-						document.getElementsByName("preco")[0].value == ""))) {
-							document.getElementsByName("preco_myform1")[0].value = 
-								document.getElementsByName("preco")[0].value;
+				function handleChangeRadio() {
+					for (var i = 0; i < document.getElementsByName("name_checkbox").length; i++) {
+						if (document.getElementsByName("name_checkbox")[i].checked) {
+							document.getElementsByName("name_checkbox")[i].checked = false;
+						}
 					}
-					if (!((document.getElementsByName("id_area")[0].value == null ||
-						document.getElementsByName("id_area")[0].value == ""))) {
-							document.getElementsByName("id_area_myform1")[0].value = 
-								document.getElementsByName("id_area")[0].value;
+					for (var i = 0; i < document.getElementsByName("operation").length; i++) {
+						if (document.getElementsByName("operation")[i].value == "Inserir") {
+							document.getElementsByName("operation")[i].disabled = true;
+						}
+						if (document.getElementsByName("operation")[i].value == "Localizar") {
+							document.getElementsByName("operation")[i].disabled = true;
+						}
+						if (document.getElementsByName("operation")[i].value == "Eliminar") {
+							document.getElementsByName("operation")[i].disabled = false;
+						}
+						if (document.getElementsByName("operation")[i].value == "Alterar") {
+							document.getElementsByName("operation")[i].disabled = false;
+						}
 					}
-					if (!((document.getElementsByName("id_glp")[0].value == null ||
-						document.getElementsByName("id_glp")[0].value == ""))) {
-							document.getElementsByName("id_glp_myform1")[0].value = 
-								document.getElementsByName("id_glp")[0].value;
+					for (var i = 0; i < document.getElementsByName("name_radio").length; i++) {
+						if (document.getElementsByName("name_radio")[i].checked) {
+							document.getElementsByName("descricao")[0].value = document.getElementsByName("descricao_hidden")[i].value;
+						}
 					}
-					document.myform2.action = "AlterarPreco.jsp";
 				}
-			}
-	     }
-	     return true;
-	}
-	</script>
+				function handleChangeCheckBox() {
+					for (var i = 0; i < document.getElementsByName("name_radio").length; i++) {
+						if (document.getElementsByName("name_radio")[i].checked) {
+							document.getElementsByName("name_radio")[i].checked = false;
+						}
+					}
+					for (var i = 0; i < document.getElementsByName("operation").length; i++) {
+						if (document.getElementsByName("operation")[i].value == "Inserir") {
+							document.getElementsByName("operation")[i].disabled = true;
+						}
+						if (document.getElementsByName("operation")[i].value == "Localizar") {
+							document.getElementsByName("operation")[i].disabled = true;
+						}
+						if (document.getElementsByName("operation")[i].value == "Eliminar") {
+							document.getElementsByName("operation")[i].disabled = false;
+						}
+						if (document.getElementsByName("operation")[i].value == "Alterar") {
+							document.getElementsByName("operation")[i].disabled = true;
+						}
+					}
+					document.getElementsByName("descricao")[0].value = "";
+				}
+				function onsubmitform() {
+					if (document.pressed == 'Inserir') {
+						if (document.getElementsByName("descricao")[0].value == null
+								|| document.getElementsByName("descricao")[0].value == "") {
+							alert('Descricao não preenchida!');
+							return false;
+						} else {
+							if (confirm("Confirma Inserção!") == true) {
+								document.myform1.action = "{{ .Host }}/CadastroPreco";
+							} else {
+								return false;
+							}
+						}
+					} else if (document.pressed == 'Localizar') {
+						document.myform1.action = "{{ .Host }}/CadastroPreco";
+					} else if (document.pressed == 'Eliminar') {
+						var selecionado = false;
+						for (var i = 0; i < document.getElementsByName("name_checkbox").length; i++) {
+							if (document.getElementsByName("name_checkbox")[i].checked) {
+								selecionado = true;
+							}
+						}
+						for (var i = 0; i < document.getElementsByName("name_radio").length; i++) {
+							if (document.getElementsByName("name_radio")[i].checked) {
+								selecionado = true;
+							}
+						}
+						if (!selecionado) {
+							alert('Nenhum registro selecionado para ser eliminado!');
+							return false;
+						} else {
+							if (confirm("Confirma Exclusão!") == true) {
+								document.myform1.action = "{{ .Host }}/CadastroPreco";
+							} else {
+								return false;
+							}
+						}
+					} else if (document.pressed == 'Alterar') {
+						if (document.getElementsByName("descricao")[0].value == null
+								|| document.getElementsByName("descricao")[0].value == "") {
+							alert('Descricao não preenchida!');
+							return false;
+						} else {
+							var selecionado = false;
+							for (var i = 0; i < document.getElementsByName("name_radio").length; i++) {
+								if (document.getElementsByName("name_radio")[i].checked) {
+									selecionado = true;
+								}
+							}
+							if (!selecionado) {
+								alert('Registro não selecionado para ser alterado!');
+								return false;
+							} else {
+								if (confirm("Confirma Alteração!") == true) {
+									document.myform1.action = "{{ .Host }}/CadastroPreco";
+								} else {
+									return false;
+								}
+							}
+						}
+					}
+					return true;
+				}
+			</script>
+
 			<div id="content_top"></div>
 			<div id="content_main">
 				<form name="myform1" onsubmit="return onsubmitform();">
@@ -115,9 +183,45 @@
 					</h1>
 					<br>
 						<h1>
-							Glp&nbsp;:&nbsp;<input type="text" name="glp">
+							Glp&nbsp;:&nbsp;<select name="id_glp">
+									<option value=""></option>
+									{{range $key1, $value1 := .Glp }}
+										{{if $value1}}
+											{{range $key2, $value2 := .}}
+												{{if $key2}}
+													{{if $value2}}
+														{{if eq $key2 1}}
+									<option value="{{$value2}}">
+														{{end}}
+														{{if eq $key2 2}}
+									{{$value2}}</option>
+														{{end}}
+													{{end}}
+												{{end}}
+											{{end}}
+										{{end}}
+									{{end}}
+								</select>
 							<h1>
-							Area&nbsp;:&nbsp;<input type="text" name="area">
+							Area&nbsp;:&nbsp;<select name="id_area">
+								<option value=""></option>
+								{{range $key1, $value1 := .Area }}
+									{{if $value1}}
+										{{range $key2, $value2 := .}}
+											{{if $key2}}
+												{{if $value2}}
+													{{if eq $key2 1}}
+														<option value="{{$value2}}">
+													{{end}}
+													{{if eq $key2 2}}
+														{{$value2}}</option>
+													{{end}}
+												{{end}}
+											{{end}}
+										{{end}}
+									{{end}}
+								{{end}}
+							</select>
 							<br><br>
 						<table border="1" align="left">
 							<tr>
@@ -133,10 +237,64 @@
 											onclick="document.pressed=this.value" value="Localizar">
 									</h1>
 								</td>
+								<td>
+									<h1>
+										<input type="submit" name="operation"
+											onclick="document.pressed=this.value" value="Eliminar" disabled>
+									</h1>
+								</td>
+								<td>
+									<h1>
+										<input type="submit" name="operation"
+											onclick="document.pressed=this.value" value="Alterar" disabled>
+									</h1>
+								</td>
 							</tr>
 						</table> <br><br><br>
-				</form>
 			</div>
+			<div id="Colunas">
+				  	<h1>
+				 	<table>
+					{{range $key1, $value1 := .TabelaDados }}
+						{{if $value1}}
+							<!--<tr>-->
+							{{range $key2, $value2 := .}}
+							 	{{if $key2}}
+								 	{{if $value2}}
+										<!-- {{if eq $key2 1}}
+											<td>{{$value2}}</td>
+										{{end}} disabled show id-->
+										{{if eq $key2 2}}
+										<input type="hidden" name="preco_hidden" value="{{$value2}}"> 
+											<td>{{$value2}}</td>
+										{{end}}
+										{{if eq $key2 4}}
+										<input type="hidden" name="descricao_glp_hidden" value="{{$value2}}"> 
+											<td>{{$value2}}</td>
+										{{end}}
+										{{if eq $key2 6}}
+										<input type="hidden" name="descricao_area_hidden" value="{{$value2}}"> 
+											<td>{{$value2}}</td>
+										{{end}}
+										{{if eq $key2 7}}
+											<!-- <td>{{$value2}}</td> disable show ts -->
+											</tr>
+										{{end}}
+									{{end}}
+								{{else}}
+								 	{{if $value2}}
+										<tr><td><input type="radio" id="id_radio" name="name_radio" value="{{$value2}}" onchange="handleChangeRadio();"></td>
+										<td><input type="checkbox" id="id_checkbox" name="name_checkbox" value="{{$value2}}" onchange="handleChangeCheckBox();"></td>
+									{{end}}
+								{{end}}
+							{{end}}
+						 	<!--</tr>-->
+						 {{end}}
+					{{end}}
+				</table>
+					</h1>
+			</div>
+				</form>
 			<div id="content_bottom"></div>
 		</div>
 	</div>
