ajustes nos CRUDs cliente, area e glp

--- a/templates/cadastro_area.html
+++ b/templates/cadastro_area.html
@@ -61,6 +61,7 @@
 							document.getElementsByName("operation")[i].disabled = false;
 						}
 					}
+					document.getElementsByName("descricao")[0].value = "";
 				}
 				function handleChangeRadio() {
 					for (var i = 0; i < document.getElementsByName("name_checkbox").length; i++) {
