correcao convertendo CRUD cliente para usar post method, e correcao erro r.ParseForm sendo chamado duas vezes

--- a/templates/cadastro_cliente.html
+++ b/templates/cadastro_cliente.html
@@ -237,7 +237,7 @@
 						return retorno;
 					}
 				</script>
-				<form name="myform1" onsubmit="return onsubmitform();">
+				<form name="myform1" onsubmit="return onsubmitform();" method="post">
 					<h1>
 						Nome&nbsp;:&nbsp;<input type="text" name="nome" onClick="handleclickDescricao()">
 					</h1>
