correcao convertendo CRUD cliente, volta uso method GET, e demais correcoes em outros CRUD's

--- a/templates/cadastro_cliente.html
+++ b/templates/cadastro_cliente.html
@@ -237,7 +237,7 @@
 						return retorno;
 					}
 				</script>
-				<form name="myform1" onsubmit="return onsubmitform();" method="post">
+				<form name="myform1" onsubmit="return onsubmitform();">
 					<h1>
 						Nome&nbsp;:&nbsp;<input type="text" name="nome" onClick="handleclickDescricao()">
 					</h1>
@@ -278,7 +278,7 @@
 					<h1>
 						Avisar gás no final&nbsp;:&nbsp;<input type="radio" name="flg_aviso_gas_final"
 							value="1">Sim</input>&nbsp;<input type="radio" name="flg_aviso_gas_final"
-							value="0">não</input>
+							value="0">Não</input>
 					</h1>
 						<br>
 						<table border="1" align="left">
