ajuste text hidden apos form

--- a/templates/cadastro_area.html
+++ b/templates/cadastro_area.html
@@ -221,11 +221,10 @@
 							{{range $key2, $value2 := .}}
 							 	{{if $key2}}
 								 	{{if $value2}}
-										<!-- {{if eq $key2 1}}
-											<td>{{$value2}}</td>
-										{{end}} disabled show id-->
+										{{if eq $key2 1}}
+											<!-- <td>{{$value2}}</td> disabled show id-->
+										{{end}}
 										{{if eq $key2 2}}
-										<input type="hidden" name="descricao_hidden" value="{{$value2}}"> 
 											<td>{{$value2}}</td>
 										{{end}}
 										{{if eq $key2 3}}
@@ -247,6 +246,25 @@
 					</h1>
 			</div>
 				</form>
+				{{range $key1, $value1 := .TabelaDados }}
+				{{if $value1}}
+					<!--<tr>-->
+					{{range $key2, $value2 := .}}
+						 {{if $key2}}
+							 {{if $value2}}
+								{{if eq $key2 1}}
+								{{end}}
+								{{if eq $key2 2}}
+								<input type="hidden" name="descricao_hidden" value="{{$value2}}"> 
+								{{end}}
+								{{if eq $key2 3}}
+								{{end}}
+							{{end}}
+						{{end}}
+					{{end}}
+					 <!--</tr>-->
+				 {{end}}
+			{{end}}
 			<div id="content_bottom"></div>
 		</div>
 	</div>
