--- a/templates/cadastro_glp.html
+++ b/templates/cadastro_glp.html
@@ -278,15 +278,13 @@
 							{{range $key2, $value2 := .}}
 							 	{{if $key2}}
 								 	{{if $value2}}
-										<!-- {{if eq $key2 1}}
-											<td>{{$value2}}</td>
-										{{end}} disabled show id-->
+										{{if eq $key2 1}}
+											<!-- <td>{{$value2}}</td> disabled show id-->
+										{{end}}
 										{{if eq $key2 2}}
-										<input type="hidden" name="descricao_hidden" value="{{$value2}}"> 
 											<td>{{$value2}}</td>
 										{{end}}
 										{{if eq $key2 3}}
-											<input type="hidden" name="glp_default_hidden" value="{{$value2}}"> 
 											<td>
 											{{if eq $value2 "1"}}
 												--->Default<---
@@ -312,6 +310,30 @@
 					</h1>
 			</div>
 				</form>
+				{{range $key1, $value1 := .TabelaDados }}
+				{{if $value1}}
+					<!--<tr>-->
+					{{range $key2, $value2 := .}}
+						 {{if $key2}}
+							 {{if $value2}}
+								{{if eq $key2 1}}
+								{{end}}
+								{{if eq $key2 2}}
+								<input type="hidden" name="descricao_hidden" value="{{$value2}}"> 
+								{{end}}
+								{{if eq $key2 3}}
+									<input type="hidden" name="glp_default_hidden" value="{{$value2}}"> 
+									{{if eq $value2 "1"}}
+									{{end}}
+								{{end}}
+								{{if eq $key2 4}}
+								{{end}}
+							{{end}}
+						{{end}}
+					{{end}}
+					 <!--</tr>-->
+				 {{end}}
+			{{end}}
 			<div id="content_bottom"></div>
 		</div>
 	</div>
